--- a/.github/workflows/arduino.yaml
+++ b/.github/workflows/arduino.yaml
@@ -39,6 +39,10 @@ jobs:
       - name: Install BME280 Library
         run: |
           arduino-cli lib install "Adafruit BME280 Library"
+
+      - name: Install ArduinoJson
+        run: |
+          arduino-cli lib install "ArduinoJson"
           
       - name: Compile Sketch
         run: arduino-cli compile --fqbn esp8266:esp8266:d1_mini ./AirGradient-DIY
