--- a/.github/workflows/arduino.yaml
+++ b/.github/workflows/arduino.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install ArduinoJson
         run: |
-          arduino-cli lib install ArduinoJson
+          arduino-cli lib install ArduinoJson@6.19.0
           
       - name: Compile Sketch
         run: arduino-cli compile --fqbn esp8266:esp8266:d1_mini ./AirGradient-DIY
